welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def peindre(){
  baisseBrosse();
  leveBrosse();
}

def fleur(c:Color){
  for(i<-1 to 3){avance();peindre()}
}

fleur(color.RED)